everything in order

--- a/index.html
+++ b/index.html
@@ -26,29 +26,25 @@
         <div class="col1">
             <!-- start column 1---- -->
             <div class="ninja1">
-                <div class="ninja-head">
-                    <h1 class="ninja">ninja</h1>
-                </div>
                 <div class="nin-infoL">
+                    <h1 class="ninja">ninja</h1>
                     <h4 class="noun">noun</h4>
                     <p class="plural">Plural: ninjas</p>
-                    <button onclick="likes(this)">13 likes</button>
+                    <button onclick="alert('Ninja liked this')">13 likes</button>
                 </div>
                 <div class="nin-infoR">
-                    <p>A practitioner skilled in the Japanese art of ninjutsu</p>
+                    <p>A practitioner skilled in the <span><a href="#">Japanese</a></span> art of <span><a href="#">ninjutsu</a></span></p>
                 </div>
             </div>
-            <div class="ninja2">
-                <div class="ninja-head">
-                    <h1 class="ninja">ninja</h1>
-                </div>
+            <div class="ninja1">
                 <div class="nin-infoL">
+                    <h1 class="ninja">ninja</h1>
                     <h4 class="noun">noun</h4>
                     <p class="plural">Plural: ninjas</p>
-                    <button onclick="likes(this)">37 likes</button>
+                    <button onclick="alert('Ninja was liked')">37 likes</button>
                 </div>
                 <div class="nin-infoR">
-                    <p>A programmer who breaks down problems with zen-like focus</p>
+                    <p>A <span><a href="#">programmer</a></span> who breaks down problems with <span><a href="#">zen</a></span>-like focus</p>
                 </div>
             </div>
         </div>
@@ -57,6 +53,8 @@
         <div class="col2">
             <div class="add">
                 <p>Dojonary is defined by <b>YOU</b></p>
+            </div>
+            <div class="button">
                 <button onclick="addDef(this)">Add Definition</button>
             </div>
         </div>
