--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input type="text" id="search" name="search" placeholder="Search">
         </div>
         <div class="navR">
-            <button onclick="logIn(this)">Login</button>
+            <button class="btn"  onclick="logIn(this)">Login</button>
         </div>
     </div>
 <!-- -----------------------end nav bar ------------------- -->
@@ -30,7 +30,7 @@
                     <h1 class="ninja">ninja</h1>
                     <h4 class="noun">noun</h4>
                     <p class="plural">Plural: ninjas</p>
-                    <button onclick="alert('Ninja liked this')">13 likes</button>
+                    <button class="leftbtn" onclick="alert('Ninja liked this')">13 likes</button>
                 </div>
                 <div class="nin-infoR">
                     <p>A practitioner skilled in the <span><a href="#">Japanese</a></span> art of <span><a href="#">ninjutsu</a></span></p>
@@ -41,7 +41,7 @@
                     <h1 class="ninja">ninja</h1>
                     <h4 class="noun">noun</h4>
                     <p class="plural">Plural: ninjas</p>
-                    <button onclick="alert('Ninja was liked')">37 likes</button>
+                    <button class="leftbtn" onclick="alert('Ninja was liked')">37 likes</button>
                 </div>
                 <div class="nin-infoR">
                     <p>A <span><a href="#">programmer</a></span> who breaks down problems with <span><a href="#">zen</a></span>-like focus</p>
@@ -55,7 +55,7 @@
                 <p>Dojonary is defined by <b>YOU</b></p>
             </div>
             <div class="button">
-                <button onclick="addDef(this)">Add Definition</button>
+                <button class="rightbtn" onclick="addDef(this)">Add Definition</button>
             </div>
         </div>
     </div>
